eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-server
  labels:
    app: dandelion-main-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dandelion-main-server
  template:
    metadata:
      labels:
        app: dandelion-main-server
    spec:
      containers:
        - name: main-container
          image: 008226931786.dkr.ecr.us-east-1.amazonaws.com/dandelion_server:4dfc1f5d3a6d10e382437753af3aa4e0fb9c2924
          ports:
            - containerPort: 3000
