eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-service
spec:
  selector:
    app: dandelion-main-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

  type: LoadBalancer
