eks/nginx_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
  # annotations:
  #   ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dandelion-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    #   nginx.ingress.kubernetes.io/default-backend: main-service
    # nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
    - host: dandelionsever.live
      http:
        paths:
          - path: /movies
            pathType: Prefix
            backend:
              service:
                name: movie-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: main-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: main-service
                port:
                  number: 80
  tls:
    - hosts:
        - dandelionsever.live
      secretName: dandelion-server-api-cert
